# keenetic-mcp

./: .env.example  .gitignore  LICENSE  README.md  keenetic-mcp.service  pyproject.toml  server.json  server.py
keenetic_mcp/: __init__.py  server.py
